--- a/ToDoList/MainWindow.xaml
+++ b/ToDoList/MainWindow.xaml
@@ -28,11 +28,13 @@
         <Button Content="Kilépés" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Height="36" Width="50" Margin="20,320,20,0" Click="Kilepes"/>
         <Button Content="^" HorizontalAlignment="Left" Margin="75,323,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="30" Click="Up"/>
         <Button Content="V" HorizontalAlignment="Left" Margin="118,323,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="30" Click="Down"/>
-        <ListBox x:Name="ToDoList" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="1" MinWidth="100" Margin="20, 12">
+        <ListBox x:Name="ToDoList" Grid.Column="1" Grid.Row="1" MinWidth="100" Margin="20,12,20,99">
             <ListBoxItem Content="Test1"/>
             <ListBoxItem Content="Test2"/>
             <ListBoxItem Content="Test3"/>
         </ListBox>
+        <ListBox x:Name="SecondList" Grid.Column="1" Grid.Row="1" Height="60" VerticalAlignment="Bottom" Margin="20,20"/>
+        <Button Content="C" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center" Height="30" Width="30" Click="Copy"/>
 
 
     </Grid>
