--- a/ToDoList/MainWindow.xaml
+++ b/ToDoList/MainWindow.xaml
@@ -10,6 +10,14 @@
         MinWidth="800"
         WindowStyle="None">
     <Grid>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="DarkSeaGreen" Offset="0.0"/>
+                <GradientStop Color="PaleTurquoise" Offset="0.35"/>
+                <GradientStop Color="LightGoldenrodYellow" Offset="0.65"/>
+                <GradientStop Color="PaleGoldenrod" Offset="1.0"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="5*"/>
@@ -18,24 +26,18 @@
             <ColumnDefinition Width="0.8*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="Szoveg" Grid.Column="1" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" MinHeight="25" MinWidth="120" Margin="50, 12" FontFamily="Times New Roman" FontSize="20"/>
-        <Button Content="Hozzáadás" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20, 20" Click="Hozzaad"/>
-        <Button Content="Törlés" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20, 70" Click="Torol"/>
-        <Button Content="Törlés Mind" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20,120" Click="TorolMind_Click"/>
-        <Button Content="Módosít" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20,170,20,0" Click="Modosit"/>
-        <Button Content="Rendezés növekvő" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20,220,20,0" Click="RendezesN"/>
-        <Button Content="Rendezés csökkenő" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20,270,20,0" Click="RendezesCS"/>
-        <Button Content="Kilépés" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Height="36" Width="50" Margin="20,320,20,0" Click="Kilepes"/>
-        <Button Content="^" HorizontalAlignment="Left" Margin="75,323,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="30" Click="Up"/>
-        <Button Content="V" HorizontalAlignment="Left" Margin="118,323,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="30" Click="Down"/>
-        <ListBox x:Name="ToDoList" Grid.Column="1" Grid.Row="1" MinWidth="100" Margin="20,12,20,99">
-            <ListBoxItem Content="Test1"/>
-            <ListBoxItem Content="Test2"/>
-            <ListBoxItem Content="Test3"/>
-        </ListBox>
-        <ListBox x:Name="SecondList" Grid.Column="1" Grid.Row="1" Height="60" VerticalAlignment="Bottom" Margin="20,20"/>
-        <Button Content="C" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center" Height="30" Width="30" Click="Copy"/>
-
-
+        <TextBox x:Name="Szoveg" Grid.Column="1" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" MinHeight="25" MinWidth="120" Margin="50, 12" FontFamily="Times New Roman" FontSize="20" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF" />
+        <Button Content="Hozzáadás" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20, 20" Click="Hozzaad" BorderBrush="#FF80D4DF" Background="{x:Null}" Foreground="#FF1F4DBF"/>
+        <Button x:Name="btnClear" Content="Törlés" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20,120,20,0" Click="Torol" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
+        <Button x:Name="btnClearAll" Content="Törlés Mind" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20,170,20,0" Click="TorolMind_Click" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
+        <Button Content="Módosít" Grid.Column="0" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20,70,20,0" Click="Modosit" Grid.Row="1" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
+        <Button x:Name="btnRendezN" Content="Rendezés növekvő" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20,220,20,0" Click="RendezesN" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
+        <Button x:Name="btnRendezCS" Content="Rendezés csökkenő" Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" Height="45" MinWidth="75" Margin="20,270,20,0" Click="RendezesCS" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
+        <Button Content="Kilépés" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Center" Height="36" Width="128" Margin="0,320,0,0" Click="Kilepes" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
+        <Button x:Name="btnUp" Content="↑" HorizontalAlignment="Left" VerticalAlignment="Center" Height="30" Width="30" Click="Up" Margin="55,0,0,0" FontSize="16" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
+        <Button x:Name="btnDown" Content="↓" HorizontalAlignment="Left" Margin="90,0,0,0" VerticalAlignment="Center" Height="30" Width="30" Click="Down" FontSize="16" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
+        <ListBox x:Name="ToDoList" Grid.Column="1" Grid.Row="1" MinWidth="100" Margin="20,12,20,99" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
+        <ListBox x:Name="SecondList" Grid.Column="1" Grid.Row="1" Height="60" VerticalAlignment="Bottom" Margin="20,20" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
+        <Button x:Name="btnCopy" Content="C" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center" Height="30" Width="30" Click="Copy" Background="{x:Null}" BorderBrush="#FF80D4DF" Foreground="#FF1F4DBF"/>
     </Grid>
 </Window>
